--- a/style.css
+++ b/style.css
@@ -210,7 +210,10 @@ footer p {
 
 .js-tabcontent section.ativo {
   display: block;
-  animation: show 0.5s forwards;
+}
+
+.js-tabcontent section.ativo.show-right {
+  animation: show-right 0.5s forwards;
 }
 
 .js-accordion dd.ativo {
@@ -229,7 +232,7 @@ footer p {
   }
 }
 
-@keyframes show {
+@keyframes show-right {
   from {
     opacity: 0;
     transform: translate3d(-30px, 0, 0);
@@ -248,7 +251,7 @@ footer p {
 
 .js-scroll.ativo {
   opacity: 1;
-  transform: translate3d(0,0,0);
+  transform: translate3d(0, 0, 0);
 }
 
 @media (max-width: 800px) {
@@ -295,7 +298,7 @@ footer p {
   .map {
     margin-bottom: 2rem;
   }
-  .footer {
+  footer {
     margin-bottom: 0px;
   }
 }
