--- a/css/global.css
+++ b/css/global.css
@@ -1,5 +1,3 @@
-@import "./variables.css";
-
 ul {
   list-style: none;
   margin: 0;
@@ -27,13 +25,16 @@ a {
 }
 
 body {
-  display: grid;
-  grid-template-columns: 1fr 120px minmax(300px, 800px) 1fr;
   margin: 0px;
   padding: 0;
   background-color: var(--c-2);
   font-family: Helvetica, sans-serif;
   font-size: 1rem;
+}
+
+.body-container {
+  display: grid;
+  grid-template-columns: 1fr 120px minmax(300px, 800px) 1fr;
 }
 
 .header {
@@ -255,7 +256,7 @@ footer p {
 }
 
 @media (max-width: 800px) {
-  body {
+  .body-container {
     grid-template-columns: 1fr;
   }
   .grid-mid,
