--- a/css/style.css
+++ b/css/style.css
@@ -2,4 +2,5 @@
 @import "./global.css";
 @import "./modal.css";
 @import "./tooltip.css";
-@import "./dropdown.css"
+@import "./dropdown.css";
+@import "./menu-mobile.css"
