animated numbers added

--- a/css/style.css
+++ b/css/style.css
@@ -3,4 +3,5 @@
 @import "./modal.css";
 @import "./tooltip.css";
 @import "./dropdown.css";
-@import "./menu-mobile.css"
+@import "./menu-mobile.css";
+@import "./numeros.css";
