--- a/css/global.css
+++ b/css/global.css
@@ -66,7 +66,7 @@ body {
 
 .animais,
 .faq,
-.contato {
+.contato,.numeros {
   display: grid;
   grid-template-columns: 90px 300px 1fr;
   gap: 20px;
