--- a/css/global.css
+++ b/css/global.css
@@ -47,7 +47,6 @@ body {
   display: flex;
   flex-wrap: wrap;
   padding: 10px;
- 
 }
 
 .header a {
@@ -66,7 +65,8 @@ body {
 
 .animais,
 .faq,
-.contato,.numeros {
+.contato,
+.numeros {
   display: grid;
   grid-template-columns: 90px 300px 1fr;
   gap: 20px;
@@ -163,6 +163,21 @@ dt::before,
   height: 10px;
   background-color: var(--c-1);
   margin-right: 10px;
+}
+
+.contato li:last-child:after {
+  display: inline-block;
+  content: "";
+  width: 6px;
+  height: 6px;
+  background-color: var(--c-3);
+  border-radius: 50%;
+  margin-left: 4px;
+  border: 2px solid var(--c-0);
+}
+
+.contato li.aberto:last-child::after {
+  background-color: chartreuse;
 }
 
 dt::after {
