--- a/css/slide.css
+++ b/css/slide.css
@@ -1,18 +1,10 @@
-body {
-  margin: 0;
-}
-ul {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-}
-img {
-  max-width: 100%;
-  display: block;
+.galeria {
+  grid-column: 1/-1;
 }
 
 .wrapper {
   overflow: hidden;
+  grid-column: 1/-1;
 }
 
 .slide {
