--- a/css/global.css
+++ b/css/global.css
@@ -66,11 +66,13 @@ body {
 .animais,
 .faq,
 .contato,
-.numeros {
+.numeros,
+.galeria {
   display: grid;
   grid-template-columns: 90px 300px 1fr;
   gap: 20px;
   margin-bottom: 4rem;
+  overflow: hidden;
 }
 
 .title {
@@ -178,8 +180,8 @@ dt::before,
 
 .btc-preco {
   background-color: chartreuse;
-  padding: .2rem .3rem;
-  margin: 0 .2rem;
+  padding: 0.2rem 0.3rem;
+  margin: 0 0.2rem;
   border-radius: 4px;
   font-weight: bold;
 }
@@ -295,7 +297,8 @@ footer p {
 
   .animais,
   .faq,
-  .contato {
+  .contato,
+  .galeria {
     grid-template-columns: 100px 1fr;
     margin-bottom: 2rem;
   }
