general bugs fix

--- a/css/dropdown.css
+++ b/css/dropdown.css
@@ -14,7 +14,7 @@
 }
 
 [data-dropdown].ativo .dropdown-menu,
-[data-dropdown]:hover .dropdown-menu{
+[data-dropdown]:hover .dropdown-menu {
   display: flex;
 }
 
@@ -42,7 +42,13 @@
   border-right: 10px solid transparent;
 }
 
-
 .dropdown-menu li a:hover {
   color: white;
+}
+
+@media (max-width: 700px) {
+  [data-dropdown] .dropdown-menu {
+    display: block;
+    animation: show-up 0.3s forwards;
+  }
 }
