--- a/css/modal.css
+++ b/css/modal.css
@@ -18,10 +18,12 @@
 .modal {
   background-color: white;
   padding: 40px;
-  min-width: 300px;
+  width: 80vw;
+  max-width: 600px;
   border: 10px solid var(--c-1);
   box-shadow: 0 0 0 10px white;
   position: relative;
+  box-sizing: border-box;
 }
 
 @keyframes anima-modal {
@@ -48,10 +50,7 @@
   border: 4px solid white;
   border-radius: 50%;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.3);
-  background-color: var(--c-3);
-  font-size: 1.2rem;
-  color: white;
-  font-family: "ibm plex mono", monospace;
+  background: var(--c-3) url(../img/fechar.svg) no-repeat center center;
   cursor: pointer;
 }
 
@@ -66,9 +65,11 @@
   width: 100%;
   padding: 0.7rem 0.5rem;
   box-sizing: border-box;
+  border: 2px solid var(--c-0);
+  border-radius: 0;
 }
 
-.modal button[type="submit"] {
+.modal button[type="button"] {
   display: block;
   background-color: var(--c-3);
   border: none;
